--- a/translations/app-config.yaml
+++ b/translations/app-config.yaml
@@ -94,6 +94,10 @@ catalog:
       rules:
         - allow: [User, Group]
 
+    # Example component for TechDocs
+    - type: file
+      target: /home/christoph/git/backstage/backstage/plugins/techdocs-backend/examples/documented-component/catalog-info.yaml
+
     ## Uncomment these lines to add more example data
     # - type: url
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
